fix cropped image saved bug; add comments to savememe function

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@ form {
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
   gap: 15px;
+  margin-bottom: 20px;
 }
 
 .form--input {
@@ -119,7 +120,6 @@ form {
 }
 
 .meme-container {
-  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: center;
